[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pphtsengine"
description = "Pure python implement of HTS_Engine"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pysen[lint]",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "pphtsengine.__version__.__version__"}